fix: image resizing affecting marker locations if container was too small

--- a/src/app/marker-map/marker-map.component.scss
+++ b/src/app/marker-map/marker-map.component.scss
@@ -48,8 +48,10 @@ $container-width: 500px;
 
 #image_ref {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
+  min-width: 100%;
+  min-height: 100%;
   object-fit: contain;
 }
 
